<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
      >

    <RelativeLayout 
        android:layout_width="match_parent"
         android:layout_height="wrap_content" >
        <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/front" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="26dp"
        android:text="@string/txt_1"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />
        
        
    </RelativeLayout>
    
     <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/bar" />
   
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:text="@string/function_1"
          android:padding="5dp"
          android:textAppearance="?android:attr/textAppearanceSmall"
           />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bgbutton"
          android:text="setMatrixColor"
          android:padding="10dp"
          android:layout_margin="5dp"
          android:onClick="setMatrixColor"
           />

       <ImageView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/dark" />

      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:text="@string/function_2"
          android:padding="5dp"
          android:textAppearance="?android:attr/textAppearanceSmall"
           />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bgbutton"
          android:text="setBackLedColor"
          android:padding="10dp"
          android:layout_margin="5dp"
          android:onClick="setBackLedColor"
           />
      
      <ImageView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/dark" />

      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:text="@string/function_3"
          android:padding="5dp"
          android:textAppearance="?android:attr/textAppearanceSmall"
           />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bgbutton"
          android:text="setLedColor"
          android:padding="10dp"
          android:layout_margin="5dp"
          android:onClick="setLedColor"
           />
       <ImageView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/dark" />
      
      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:text="@string/function_4"
          android:padding="5dp"
          android:textAppearance="?android:attr/textAppearanceSmall"
           />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bgbutton"
          android:text="setMatrixArrayColor"
          android:padding="10dp"
          android:layout_margin="5dp"
          android:onClick="setMatrixArrayColor"
           />
      
        <ImageView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/dark" />
      
      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:text="@string/function_5"
          android:padding="5dp"
          android:textAppearance="?android:attr/textAppearanceSmall"
           />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bgbutton"
          android:text="closeBtConnection"
          android:padding="10dp"
          android:layout_margin="5dp"
          android:onClick="closeBtConnection"
           />
      
        <ImageView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/dark" />
      
      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:text="@string/function_6"
          android:padding="5dp"
          android:textAppearance="?android:attr/textAppearanceSmall"
           />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bgbutton"
          android:text="clear"
          android:padding="10dp"
          android:layout_margin="5dp"
          android:onClick="clear"
           />
      
        <ImageView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/dark" />
      
      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:text="@string/function_7"
          android:padding="5dp"
          android:textAppearance="?android:attr/textAppearanceSmall"
           />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bgbutton"
          android:text="shutDown"
          android:padding="10dp"
          android:layout_margin="5dp"
          android:onClick="shutDown"
           />
      
              <ImageView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/dark" />
      
      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:text="@string/function_8"
          android:padding="5dp"
          android:textAppearance="?android:attr/textAppearanceSmall"
           />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bgbutton"
          android:text="start animation"
          android:padding="10dp"
          android:layout_margin="5dp"
          android:onClick="animationTest"
           />
      
               <ImageView
        android:id="@+id/divider1"
        android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/dark" />
      
      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:text="@string/function_9"
          android:padding="5dp"
          android:textAppearance="?android:attr/textAppearanceSmall"
           />

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/bgbutton"
          android:text="getDataSensors"
          android:padding="10dp"
          android:layout_margin="5dp"
          android:onClick="getDataSensors"
           />
      
       <TextView
          android:id="@+id/sensor_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:text=""
          android:padding="5dp"
          android:textAppearance="?android:attr/textAppearanceSmall"
           />
      
        </LinearLayout>
        
        
    </ScrollView>
    
    
</LinearLayout>